# nakimi

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  install.sh  pyproject.toml  rename_docs.py  requirements.txt
.github/: SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
docs/: README.md  SECURITY.md  _config.yml  index.md
docs/api/: README.md  index.md
docs/development/: ADR.md  ARCHITECTURE.md  GIT_HOOKS.md  PLUGIN_DEVELOPMENT.md  TESTS.md  index.md
docs/examples/: index.md  yubikey-cli.md
docs/getting-started/: INSTALL.md  index.md
docs/plugins/: GMAIL_SETUP.md  index.md
docs/project/: GRADE_REPORT.md  MATURITY.md  ROADMAP.md  index.md
docs/security/: README.md  SECURITY.md  index.md  yubikey.md
src/kimi_vault/: __init__.py
src/kimi_vault/cli/: __init__.py  __main__.py  main.py
src/kimi_vault/core/: __init__.py  config.py  plugin.py  vault.py
src/kimi_vault/plugins/: __init__.py
src/kimi_vault/plugins/gmail/: __init__.py  client.py  plugin.py
src/nakimi/: __init__.py  mcp_server.py
src/nakimi/cli/: __init__.py  __main__.py  main.py
src/nakimi/core/: __init__.py  config.py  plugin.py  vault.py  yubikey.py
src/nakimi/plugins/: __init__.py
src/nakimi/plugins/gmail/: __init__.py  client.py  plugin.py
tests/: conftest.py
tests/integration/: test_cli.py  test_gmail_plugin.py
tests/unit/: test_mcp_server.py  test_plugin.py  test_vault.py  test_yubikey.py
